--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Dinamicas Magneticas/pendulum.txt
+/Dinamicas Magneticas/pendulum.png
+/Dinamicas Magneticas/lorenzTest.txt
+/Dinamicas Magneticas/lorenzTest.png
